problem with th's width while sorting and while horizontal scroll fixed; percent widths for cols

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -67,10 +67,8 @@ body {
 	/*table-grid*/
 	.table-grid {
 		overflow: hidden;
-		//min-width: @grid-width;
 		table-layout: fixed;
 		max-width: none;
-	//	min-width: 100%;
 		min-width: @grid-width;
 		font-size: 13px;
 		background: #fff;
@@ -338,11 +336,10 @@ body {
 				td {
 					padding: 0 !important;
 					height: 0;
-					border: 0;
+					border-width: 0;
 
 					div {
 						height: 0;
-						//background: red;
 					}
 				}
 			}
@@ -355,6 +352,8 @@ body {
 					padding-bottom: 3px;
 					padding-left: 5px;
 					padding-right: 5px;
+					//width: 25%;
+
 
 					&[colspan="200"] {
 						padding: 0;
@@ -410,6 +409,26 @@ body {
 							min-width: 130px;
 							max-width: 170px;
 						}
+					}
+
+					&.col-id {
+						width: 10%;
+					}
+
+					&.col-content {
+						width: 40%;
+					}
+
+					&.col-actiuve {
+						width: 25%;
+					}
+
+					&.col-delete {
+						width: 25%;
+
+						/*.w {
+							width: 200px;
+						}*/
 					}
 
 
